--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 header {
-    padding-bottom: 120px;
+    padding-bottom: 130px;
 
     .nav_mobile {
 
@@ -208,6 +208,130 @@ header {
 
 footer {
     margin-top: 40px;
+}
+
+#conteiner_carrosel {
+    .categoria {
+        margin: 25px 15px 0 15px;
+        border-bottom: solid 3px white;
+
+        display: flex;
+        justify-content: space-between;
+        align-items: center !important;
+
+        h2 {
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        a {
+            text-decoration: none;
+            color: var(--text_white) !important;
+            font-size: 16px;
+            font-weight: bold;
+
+            p {
+                background-image: linear-gradient(90deg,
+                        #ffffff33 0%,
+                        #00000033 100%);
+                border: solid 1px var(--text_white);
+                border-radius: 20px;
+                padding: 5px 10px;
+            }
+        }
+    }
+
+    .carousel {
+        width: 100%;
+
+        padding: 20px 0;
+
+        .flickity-page-dots {
+            display: none !important;
+        }
+
+        .flickity-button {
+            background-color: transparent !important;
+
+            /* transform: translateY(-200%); */
+
+            svg {
+                color: white !important;
+                opacity: 100% !important;
+            }
+        }
+
+        .carousel-cell {
+            width: 70.1%;
+
+            padding: 20px 10px;
+            margin-right: 20px;
+            background-color: #ffffff1f;
+            border: solid 2px white;
+
+            border-radius: 20px;
+            counter-increment: carousel-cell;
+            box-shadow: 0 2px 10px rgba(255, 255, 255, 0.404);
+
+            a {
+                text-decoration: none !important;
+
+                .img {
+                    text-align: center;
+
+                    img {
+                        width: 66.66%;
+                        margin-bottom: 20px;
+                    }
+                }
+
+                .descricao {
+                    .desc {
+                        display: -webkit-box;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        -webkit-line-clamp: 2;
+                        margin-bottom: 5px;
+                        font-size: 15px;
+                        font-family: montserrat !important;
+                        font-weight: bold;
+                        color: white;
+                    }
+
+                    .preco {
+                        color: rgb(255, 208, 0);
+
+                        font-size: 24px;
+                        font-weight: bold;
+                        font-family: "montserrat";
+
+                        margin: 0;
+                    }
+
+                    .sub_preco {
+                        font-family: Arial, Helvetica, sans-serif;
+                        color: white;
+                        width: 170px;
+                        font-size: 15px;
+                        margin: 0;
+
+                        span {
+                            font-weight: bold;
+                        }
+                    }
+                }
+            }
+
+            &:before {
+                display: block;
+                text-align: center;
+                line-height: 200px;
+                font-size: 80px;
+                color: white;
+            }
+        }
+    }
 }
 
 #area_endereco {
@@ -576,6 +700,7 @@ footer {
             }
         }
     }
+
 }
 
 #main_detalhe {
@@ -701,9 +826,13 @@ footer {
                 }
 
                 .compra_botao {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center !important;
+                    gap: 10px;
 
                     .comprar_cart {
-
+                        width: 75%;
                         height: 50px;
                         font-size: 24px;
                         font-weight: bold;
@@ -714,13 +843,10 @@ footer {
                         border: solid 1px #ffffff;
                         border-radius: 50px;
 
-                        margin-right: 20px;
-                        padding: 0 15px;
-
                     }
 
                     .carrinho {
-                        width: 84px;
+                        width: 76px;
                         height: 50px;
                         font-size: 24px;
                         font-weight: bold;
@@ -731,7 +857,7 @@ footer {
                         background-image: linear-gradient(160deg, rgba(255, 255, 255, 0.100) 0%, rgb(0, 0, 0, 0.1) 100%);
                         border: solid 1px #ffffff;
                         border-radius: 50px;
-                        padding: 0 15px;
+                        
                     }
                 }
 
@@ -758,38 +884,48 @@ footer {
 
                     margin-bottom: 15px;
 
-                    input {
-                        width: 192px;
-                        height: 50px;
-                        padding: 0 15px;
-                        border-radius: 20px;
-                        border: solid 1px white;
-                        border-radius: 50px;
-                        background-color: transparent !important;
-                        background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.100) 0%, rgb(0, 0, 0, 0.1) 100%);
-                        margin-bottom: 0px;
-                        margin-right: 20px;
-                    }
+                    form {
+                        width: 100%;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center !important;
+                        gap: 10px;
 
-                    input::placeholder {
-                        color: white;
-                        opacity: 80%;
-                        font-size: 16px;
-                    }
+                        input {
+                            width: 75%;
+                            height: 50px;
+                            padding: 0 15px;
+                            border-radius: 20px;
+                            border: solid 1px white;
+                            border-radius: 50px;
+                            color: white;
+                            background-color: transparent !important;
+                            background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.100) 0%, rgb(0, 0, 0, 0.1) 100%);
+                            margin-bottom: 0px;
 
-                    button {
-                        height: 50px;
-                        padding: 0 24px;
-                        border-radius: 20px;
-                        border: solid 1px white;
-                        border-radius: 50px;
-                        background-color: transparent !important;
-                        background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.100) 0%, rgb(0, 0, 0, 0.1) 100%);
+                        }
 
-                        color: white;
-                        font-weight: bold;
-                        font-size: 22px;
-                        text-align: center;
+                        input::placeholder {
+                            color: white;
+                            opacity: 80%;
+                            font-size: 16px;
+                        }
+
+                        button {
+                            width: 76px;
+                            height: 50px;
+                            
+                            border-radius: 20px;
+                            border: solid 1px white;
+                            border-radius: 50px;
+                            background-color: transparent !important;
+                            background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.100) 0%, rgb(0, 0, 0, 0.1) 100%);
+
+                            color: white;
+                            font-weight: bold;
+                            font-size: 22px;
+                            text-align: center;
+                        }
                     }
                 }
 
@@ -836,6 +972,7 @@ footer {
     .conteiner_ficha {
         width: 95%;
         margin: auto;
+        margin-bottom: 40px;
 
         h2 {
             font-size: 30px;
